<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="welcome_task_one">Swipe right to complete</string>
    <string name="welcome_task_two">Swipe left to snooze</string>
    <string name="welcome_task_three">Tap to show details</string>
    <string name="welcome_tag_one">home</string>
    <string name="welcome_tag_two">shopping</string>
    <string name="welcome_first_branding">Focus. Swipe. Achieve.</string>
    <string name="welcome_second_branding">Task list made for High Achievers</string>
    <string name="welcome_dialog_title">Welcome to Swipes!</string>
    <string name="welcome_dialog_message">Would you like to try out the app or log in to your account?</string>
    <string name="welcome_dialog_yes">Log in</string>
    <string name="welcome_dialog_no">Try out</string>
    <string name="app_name">Swipes</string>
    <string name="focus_title">NOW</string>
    <string name="later_title">LATER</string>
    <string name="done_title">DONE</string>
    <string name="overview_title">OVERVIEW</string>
    <string name="title_share_intent">Add to Swipes</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_integrations">Integrations</string>
    <string name="title_activity_snooze_settings">Snoozes</string>
    <string name="title_activity_add_tasks">Add Task</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_snooze_task">Snooze Task</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_evernote_learn">Evernote Integration</string>
    <string name="title_activity_evernote_attachments">Evernote Attachments</string>
    <string name="all_done_now">= ALL DONE FOR NOW =</string>
    <string name="all_done_today">= ALL DONE FOR TODAY =</string>
    <string name="all_done_now_next">Next task @ %s</string>
    <string name="all_done_today_next">Next task %s</string>
    <string name="all_done_next_empty">No future tasks</string>
    <string name="all_done_today_message">Hooray! All tasks swiped away, time to \nrelax. #ProductiveDay</string>
    <string name="all_done_now_message">Time for a break! I\'ve been swiping \ntasks like a boss. #ProductiveDay</string>
    <string name="all_done_share_url">swipesapp.com</string>
    <string name="later_empty_workspace">No scheduled tasks with tags: &lt;b>%1$s&lt;/b></string>
    <string name="focus_empty_workspace">No current tasks with tags: &lt;b>%1$s&lt;/b></string>
    <string name="done_empty_workspace">No completed tasks with tags: &lt;b>%1$s&lt;/b></string>
    <string name="later_empty_search">No scheduled tasks found for &lt;b>%1$s&lt;/b></string>
    <string name="focus_empty_search">No current tasks found for &lt;b>%1$s&lt;/b></string>
    <string name="done_empty_search">No completed tasks found for &lt;b>%1$s&lt;/b></string>
    <string name="tasks_list_login_action">Log in or register</string>
    <string name="tasks_list_multi_select_action">Multi Select</string>
    <string name="tasks_list_search_action">Search</string>
    <string name="tasks_list_workspaces_action">Workspaces</string>
    <string name="tasks_list_settings_action">Settings</string>
    <string name="tasks_cell_label_focus">%1$s/%2$s Today</string>
    <string name="group_cloud">Cloud</string>
    <string name="group_preferences">Preferences</string>
    <string name="group_help">Help</string>
    <string name="group_other">Other</string>
    <string name="options">Options</string>
    <string name="theme">Theme</string>
    <string name="settings_theme_dialog_title">Theme</string>
    <string name="snoozes">Snoozes</string>
    <string name="settings_login">Log in or register</string>
    <string name="settings_logout">Log out</string>
    <string name="settings_integrations">Integrations</string>
    <string name="settings_sync">Synchronize</string>
    <string name="settings_sync_summary">Last update: %s</string>
    <string name="switch_on">YES</string>
    <string name="switch_off">NO</string>
    <string name="preference_yes">Choose</string>
    <string name="preference_no">Cancel</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="language">Language</string>
    <string name="language_warning_title">Exit the app?</string>
    <string name="language_warning">Swipes needs to be restarted for the changes to take effect.</string>
    <string name="language_warning_yes">Exit</string>
    <string name="language_warning_no">Cancel</string>
    <string name="group_tweaks">Tweaks</string>
    <string name="group_notifications">Notifications</string>
    <string name="options_location">Location</string>
    <string name="options_location_detail">Access device location.</string>
    <string name="options_background_sync">Background sync</string>
    <string name="options_background_sync_detail">Keep tasks updated automatically in the background.</string>
    <string name="options_background_sync_frequency">Frequency</string>
    <string name="options_background_sync_frequency_off">Off</string>
    <string name="options_background_sync_frequency_normal">Normal</string>
    <string name="options_background_sync_frequency_real_time">Real time</string>
    <string name="options_add_to_bottom">Add to bottom</string>
    <string name="options_add_to_bottom_detail">Add new tasks to the bottom of the list.</string>
    <string name="options_scroll_to_added">Scroll to added</string>
    <string name="options_scroll_to_added_detail">Auto-scroll to focus on the newest added task.</string>
    <string name="options_in_app_sounds">In-app sounds</string>
    <string name="options_in_app_sounds_detail">Play sounds when performing actions in the app.</string>
    <string name="options_snoozed_tasks">Snoozed tasks</string>
    <string name="options_snoozed_tasks_detail">Notify of snoozed tasks on their selected time.</string>
    <string name="options_daily_reminder">Daily reminder</string>
    <string name="options_daily_reminder_detail">Show a daily reminder to plan the day.</string>
    <string name="options_weekly_reminder">Weekly reminder</string>
    <string name="options_weekly_reminder_detail">Show a weekly reminder to plan the week.</string>
    <string name="options_vibration">Vibration</string>
    <string name="options_vibration_detail">Vibrate when notifications are shown.</string>
    <string name="options_system_sound">Use system sound</string>
    <string name="options_system_sound_detail">Enable to use system sound for notifications.</string>
    <string name="help_center">Help Center</string>
    <string name="help_google_community">Google+ community</string>
    <string name="help_contact_us">Contact us</string>
    <string name="help_email_receiver">support@swipesapp.com</string>
    <string name="help_email_subject">[Android] Support request</string>
    <string name="help_email_chooser_title">Contact with:</string>
    <string name="help_email_text_hint">Describe your problem&#8230;</string>
    <string name="day_start">Day start</string>
    <string name="evening_start">Evening start</string>
    <string name="weekend_day_start">Weekend day start</string>
    <string name="week_start">Week start</string>
    <string name="weekend_start">Weekend start</string>
    <string name="settings_weekend_start_dialog_title">Weekend start</string>
    <string name="settings_week_start_dialog_title">Week start</string>
    <string name="settings_later_today">Later today</string>
    <string name="settings_later_today_dialog_title">Later today</string>
    <string name="later_today_1h">+1 hour</string>
    <string name="later_today_2h">+2 hours</string>
    <string name="later_today_3h">+3 hours</string>
    <string name="later_today_4h">+4 hours</string>
    <string name="later_today_5h">+5 hours</string>
    <string name="later_today_6h">+6 hours</string>
    <string name="evernote_link_account">Evernote</string>
    <string name="evernote_link_account_detail">Tap to link account</string>
    <string name="evernote_unlink_account">Evernote (connected)</string>
    <string name="evernote_unlink_account_detail">Tap to unlink</string>
    <string name="evernote_sync_device">Sync with Evernote on this device</string>
    <string name="evernote_auto_import">Auto import notes with \"swipes\" tag</string>
    <string name="evernote_sync_personal">Sync with personal linked notebooks</string>
    <string name="evernote_sync_business">Sync with Evernote Business</string>
    <string name="evernote_open_importer">Open Evernote Importer</string>
    <string name="evernote_learn_more">Learn More</string>
    <string name="evernote_learn_more_title_left">EVERNOTE</string>
    <string name="evernote_learn_more_title_right">INTEGRATION</string>
    <string name="evernote_what_it_is">WHAT IT IS</string>
    <string name="evernote_what_it_is_description">
        This integration lets you sync notes with checkmarks from Evernote into Swipes.</string>
    <string name="evernote_how_it_works">HOW IT WORKS</string>
    <string name="evernote_how_it_works_detail">
        Assign the \"swipes\" tag to a note in Evernote.
        We\'ll add it as a task in Swipes and sync all its checkmarks.</string>
    <string name="evernote_get_started">GET STARTED</string>
    <string name="evernote_unlink_dialog_title">Unlink Evernote?</string>
    <string name="evernote_unlink_dialog_message">All tasks will be unlinked.</string>
    <string name="evernote_unlink_dialog_yes">Unlink</string>
    <string name="evernote_unlink_dialog_no">Cancel</string>
    <string name="evernote_untitled_note">Untitled note</string>
    <string name="evernote_login_dialog_title">Log in to Swipes</string>
    <string name="evernote_login_dialog_message">Please log in to your Swipes account before linking Evernote.</string>
    <string name="evernote_login_warning_message">Please log in to your Swipes account to sync with Evernote.</string>
    <string name="evernote_login_dialog_yes">Log in</string>
    <string name="evernote_login_dialog_no">Cancel</string>
    <string name="evernote_login_dialog_ok">Got it</string>
    <string name="evernote_search_hint">Search notes</string>
    <string name="evernote_filter_description">Only notes with tasks inside</string>
    <string name="about">About</string>
    <string name="app_version" translatable="false">%1$s (%2$d)</string>
    <string name="about_brought_by">This app is brought to you by</string>
    <string name="about_app_version">App version</string>
    <string name="about_policies">Policies</string>
    <string name="about_policies_detail">Tap to download policies</string>
    <string name="about_oss">Open source licenses</string>
    <string name="about_oss_licenses">TimePreference based on CommonsWare code. Licensed under Apache.</string>
    <string name="settings_invite">Invite friends to Swipes</string>
    <string name="invite_subject">Check out this new cool app</string>
    <string name="repeat_option_never">never</string>
    <string name="repeat_option_day">day</string>
    <string name="repeat_option_mon_fri">mon-fri</string>
    <string name="repeat_option_week">week</string>
    <string name="repeat_option_month">month</string>
    <string name="repeat_option_year">year</string>
    <string name="now_widget_tasks_count_label">TODAY</string>
    <string name="now_widget_empty_count_label">NO TASKS</string>
    <string name="now_widget_progress_separator">/</string>
</resources>