<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:key="invite"
        android:title="@string/settings_invite" />

    <Preference
        android:key="login"
        android:title="@string/settings_login" />

    <Preference
        android:key="logout"
        android:title="@string/settings_logout" />

    <PreferenceScreen android:title="@string/settings_integrations">
        <intent
            android:targetClass="com.swipesapp.android.ui.activity.IntegrationsActivity"
            android:targetPackage="com.swipesapp.android" />
    </PreferenceScreen>

    <com.negusoft.holoaccent.preference.SwitchPreference
        android:defaultValue="true"
        android:key="settings_enable_notifications"
        android:switchTextOff="@string/switch_off"
        android:switchTextOn="@string/switch_on"
        android:title="@string/notifications" />

    <com.negusoft.holoaccent.preference.SwitchPreference
        android:defaultValue="true"
        android:key="settings_enable_location"
        android:switchTextOff="@string/switch_off"
        android:switchTextOn="@string/switch_on"
        android:title="@string/location" />

    <com.negusoft.holoaccent.preference.ListPreference
        android:defaultValue="light"
        android:dialogTitle="@string/settings_theme_chooser_dialog_title"
        android:entries="@array/theme_list"
        android:entryValues="@array/theme_values_list"
        android:key="settings_theme"
        android:title="@string/theme" />

    <PreferenceScreen android:title="@string/snoozes">
        <intent
            android:targetClass="com.swipesapp.android.ui.activity.SnoozeSettingsActivity"
            android:targetPackage="com.swipesapp.android" />
    </PreferenceScreen>

    <PreferenceScreen android:title="@string/about">
        <intent
            android:targetClass="com.swipesapp.android.ui.activity.AboutActivity"
            android:targetPackage="com.swipesapp.android" />
    </PreferenceScreen>

    <!-- Sync button used for debug only. -->
    <Preference
        android:key="sync"
        android:title="Sync" />

</PreferenceScreen>