<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:layout_marginTop="@dimen/toolbar_shadow_height"
    android:background="@drawable/widget_toolbar_background"
    android:baselineAligned="false">

    <LinearLayout
        android:id="@+id/now_widget_count_area"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <!-- Tasks count -->
        <LinearLayout
            android:id="@+id/now_widget_tasks_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="-2dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/now_widget_tasks_completed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:ellipsize="end"
                android:fontFamily="sans-serif-light"
                android:singleLine="true"
                android:text="@string/now_widget_progress_separator"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/now_widget_tasks_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>

        <!-- Empty count -->
        <TextView
            android:id="@+id/now_widget_empty_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/now_widget_empty_count_label"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            android:textStyle="bold" />

        <!-- Count label -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:singleLine="true"
            android:text="@string/now_widget_tasks_count_label"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <!-- Toolbar buttons -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/now_widget_show_tasks"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/widget_circle"
            android:stateListAnimator="@null"
            android:text="="
            android:textColor="@color/focus_accent"
            android:textSize="23sp" />

        <Button
            android:id="@+id/now_widget_add_task"
            android:layout_width="31dp"
            android:layout_height="31dp"
            android:background="@drawable/widget_circle"
            android:stateListAnimator="@null"
            android:text="+"
            android:textColor="@color/focus_accent"
            android:textSize="23sp" />

    </LinearLayout>

</RelativeLayout>